k8s/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  type: ClusterIP
  selector:
    name: ollama
  ports:
  - port: 80
    name: http
    targetPort: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: ollama
spec:
  type: ClusterIP
  selector:
    name: webui
  ports:
  - port: 80
    name: http
    targetPort: http
    protocol: TCP
